--- a/popup.html
+++ b/popup.html
@@ -1,60 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Care</title>
-    <!-- sage green -->
-
-    <style>
-        body {
-            margin: 0;
-            padding-bottom: 50px; /* to prevent content overlap with nav */
-        }
-        .bottom-nav {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #333;
-            display: flex;
-            justify-content: space-around;
-            padding: 10px 0;
-        }
-        .bottom-nav a {
-            color: white;
-            text-align: center;
-            padding: 10px;
-            text-decoration: none;
-            flex-grow: 1;
-        }
-        .bottom-nav a:hover {
-            background-color: #555;
-        }
-    </style>
-
-
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #00ff00;
-            text-align: center;
-        }
-        input, button {
-            margin: 10px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #00ff00;
-            color: #121212;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
+    <title>Green Thumb</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="content">
+        <h1>Extension Content</h1>
+        <p>Your extension content goes here.</p>
+    </div>
+    <nav class="bottom-nav">
+        <ul>
+            <li><a href="#activityLog" data-page="activity.html">Activity</a></li>
+            <li><a href="#Home" data-page="home.html">Home</a></li>
+            <li><a href="#Profile" data-page="profile.html">Profile</a></li>
+        </ul>
+    </nav>
+    <script src="popup.js"></script>
+</body>
+<!-- <body>
     <h1>Plant Care</h1>
     <div>
         <label for="waterInput">Water (ml):</label><br>
@@ -72,5 +40,6 @@
             document.getElementById('status').innerText = `Plant watered with ${water}ml and given ${sunlight} hours of sunlight!`;
         });
     </script>
-</body>
+</body> -->
+
 </html>
