working on activity

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </div>
     <nav class="bottom-nav">
         <ul>
-            <li><a href="#activityLog" data-page="pages/activity.html">Activity</a></li>
+            <li><a href="#activityLog" data-page="pages/activity/activity.html">Activity</a></li>
             <li><a href="#Home" data-page="pages/home.html">Home</a></li>
             <li><a href="#Profile" data-page="pages/profile.html">Profile</a></li>
         </ul>
