--- a/popup.html
+++ b/popup.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="plant-image">
-            <img src="images/image2.png" alt="Plant" id="plantImage">
-        </div>
         <div class="content">
             <h1>Extension Content</h1>
             <p>Your extension content goes here.</p>
+        </div>
+        <div class="plant-image">
+            <img src="images/plant.png" alt="Plant" id="plantImage">
         </div>
         <nav class="bottom-nav">
             <ul>
