--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
             <p>Your extension content goes here.</p>
         </div>
         <div class="plant-image">
-            <img src="images/plant.png" alt="Plant" id="plantImage">
+            <img src="images/image4.png" alt="Plant" id="plantImage">
         </div>
         <nav class="bottom-nav">
             <ul>
