--- a/popup.html
+++ b/popup.html
@@ -10,21 +10,23 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <div class="container">
-        <div class="content">
-            <h1>Extension Content</h1>
-            <p>Your extension content goes here.</p>
+    <div id = "popupContainer"
+        <div class="container">
+            <div class="content">
+                <h1>Extension Content</h1>
+                <p>Your extension content goes here.</p>
+            </div>
+            <div class="plant-image">
+                <img src="images/image4.png" alt="Plant" id="plantImage">
+            </div>
+            <nav class="bottom-nav">
+                <ul>
+                    <li><a href="#activityLog" data-page="pages/activity/activity.html">Activity</a></li>
+                    <li><a href="#home" data-page="pages/home.html">Home</a></li>
+                    <li><a href="#profile" data-page="pages/profile.html">Profile</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="plant-image">
-            <img src="images/image4.png" alt="Plant" id="plantImage">
-        </div>
-        <nav class="bottom-nav">
-            <ul>
-                <li><a href="#activityLog" data-page="pages/activity/activity.html">Activity</a></li>
-                <li><a href="#home" data-page="pages/home.html">Home</a></li>
-                <li><a href="#profile" data-page="pages/profile.html">Profile</a></li>
-            </ul>
-        </nav>
     </div>
     <script src="popup.js"></script>
 </body>
