need to fix css file

--- a/popup.html
+++ b/popup.html
@@ -15,14 +15,11 @@
             <h1>Extension Content</h1>
             <p>Your extension content goes here.</p>
         </div>
-        <div class="plant-image">
-            <img src="images/image4.png" alt="Plant" id="plantImage">
-        </div>
         <nav class="bottom-nav">
             <ul>
                 <li><a href="#activityLog" data-page="pages/activity/activity.html">Activity</a></li>
-                <li><a href="#home" data-page="pages/home.html">Home</a></li>
-                <li><a href="#profile" data-page="pages/profile.html">Profile</a></li>
+                <li><a href="#home" data-page="pages/home/home.html">Home</a></li>
+                <li><a href="#profile" data-page="pages/profile/profile.html">Profile</a></li>
             </ul>
         </nav>
     </div>
