--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Thumb</title>
-    <!-- <link rel="stylesheet" href="popup.css"> -->
+    <link rel="stylesheet" href="profile.css">
 </head>
 
 <body>
-    <div class="content">
+    <div class="profilecontent">
         <h1>Profile Content</h1>
         <p>Your extension content goes here.</p>
     </div>
