--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
         </div>
         <nav class="bottom-nav">
             <ul>
-                <li><a href="#activityLog" data-page="pages/activity/activity.html">Activity</a></li>
-                <li><a href="#home" data-page="pages/home/home.html">Home</a></li>
-                <li><a href="#profile" data-page="pages/profile/profile.html">Profile</a></li>
+                <li><a href="pages/activity/activity.html" data-page="pages/activity/activity.html">Activity</a></li>
+                <li><a href="pages/home/home.html" data-page="pages/home/home.html">Home</a></li>
+                <li><a href="pages/profile/profile.html" data-page="pages/profile/profile.html">Profile</a></li>
             </ul>
         </nav>
     </div>
