--- a/pages/activity.html
+++ b/pages/activity.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity Page</title>
-    <link rel="stylesheet" href="activity.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <li> Water Plant </li>
         </ul>
     </div>
-    <script src="activity.js"></script>
+    <script src="popup.js"></script>
 </body>
 
 </html>
