--- a/pages/home.html
+++ b/pages/home.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Thumb</title>
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <div class="profilecontent">
-        <h1>Profile Content</h1>
+    <div class="content">
+        <h1>Home Content</h1>
         <p>Your extension content goes here.</p>
+    </div>
+    <div class="plant-image">
+        <img src="images/image4.png" alt="Plant" id="plantImage">
     </div>
 </body>
 
