--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Thumb</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <div class="content">
-        <h1>Home Content</h1>
+    <div id="profilecontent">
+        <h1>Your Profile</h1>
         <p>Your extension content goes here.</p>
-    </div>
-    <div class="plant-image">
-        <img src="images/image4.png" alt="Plant" id="plantImage">
     </div>
 </body>
 
