--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="popup.css">
 </head>
-<body>
+<body id = "body">
     <div class="container">
         <div class="content">
             <h1>Extension Content</h1>
@@ -17,12 +17,12 @@
         </div>
         <nav class="bottom-nav">
             <ul>
-                <li><a href="pages/activity/activity.html" data-page="pages/activity/activity.html">Activity</a></li>
-                <li><a href="pages/home/home.html" data-page="pages/home/home.html">Home</a></li>
-                <li><a href="pages/profile/profile.html" data-page="pages/profile/profile.html">Profile</a></li>
+                <li><a href="pages/activity.html" data-page="pages/activity.html">Activity</a></li>
+                <li><a href="pages/home.html" data-page="pages/home.html">Home</a></li>
+                <li><a href="pages/profile.html" data-page="pages/profile.html">Profile</a></li>
             </ul>
         </nav>
-    </div>
+    </div> 
     <script src="popup.js"></script>
 </body>
 </html>
