--- a/pages/activity.html
+++ b/pages/activity.html
@@ -14,7 +14,12 @@
             <li> Water Plant </li>
         </ul>
     </div>
-    <script src="popup.js"></script>
+
+
+    <button id="waterButton">Water Your Plants</button>
+    <div id="message"></div>
+
+    <script src="js/activity.js"></script>
 </body>
 
 </html>
