button code editing

--- a/pages/activity.html
+++ b/pages/activity.html
@@ -16,17 +16,10 @@
     </div>
 
 
-    <button id="myButton">Water</button>
+    <button id="button">Water Your Plant!</button>
+    
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var button = document.getElementById("myButton");
-            button.addEventListener("click", function() {
-                button.textContent = "you clicked me";
-            });
-        });
-        
-    </script>
+    <script src = "js/activity.js" ></script>
 </body>
 
 </html>
